--- a/src/components/Import/ImportingTip.scss
+++ b/src/components/Import/ImportingTip.scss
@@ -65,6 +65,7 @@
   color: $zorroa-gray;
   border-radius: 3px;
   text-transform: uppercase;
+  cursor: pointer;
 
   &:hover { background-color: $zorroa-lightgray; }
 }
