--- a/src/components/Import/LocalChooser.scss
+++ b/src/components/Import/LocalChooser.scss
@@ -174,6 +174,7 @@ $dropcolor: rgba(115, 182, 28, 0.1);
   text-transform: uppercase;
   font-size: 12px;
   min-height: 20px;
+  cursor: pointer;
   &:hover {
     color: white;
     background-color: $zorroa-sickly-green;
@@ -189,6 +190,7 @@ $dropcolor: rgba(115, 182, 28, 0.1);
   .icon-cancel-circle {
     font-size: 10px;
     color: $zorroa-lightgray;
+    cursor: pointer;
 
     &:hover {
       color: $zorroa-faded-red;
