--- a/src/components/Racetrack/SimilarHash.scss
+++ b/src/components/Racetrack/SimilarHash.scss
@@ -40,6 +40,7 @@
 
 .SimilarHash-body {
   padding: 10px;
+  @include flexColCenter;
 }
 
 .SimilarHash-value-cell {
@@ -50,7 +51,83 @@
 }
 
 .SimilarHash-thumb {
-  min-width: 0;
-  //min-height: 0;
-  min-height: 100px !important;
+  min-width: 160px;
+  min-height: 120px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-left: 2px;
+  margin-right: 2px;
+}
+
+.SimilarHash-carousel {
+  min-height: 120px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  overflow: auto;
+  width: 100%;
+  @include flexRowCenter;
+  &::-webkit-scrollbar { height: 5px; }
+}
+
+.SimilarHash-carousel-empty {
+  @include flexColCenter;
+}
+
+.SimilarHash-carousel-empty-icon {
+  font-size: 60px;
+  color: $zorroa-lightgray;
+}
+
+.SimilarHash-carousel-empty-label {
+  margin-top: 10px;
+  color: $zorroa-lightgray;
+}
+
+.SimilarHash-slider {
+  width: 100%;
+  @include flexRowCenter;
+
+  input[type=range]::-webkit-slider-runnable-track {
+    height: 3px;
+    background: $zorroa-lightgray;
+  }
+
+  input[type=range]:focus::-webkit-slider-runnable-track {
+    height: 3px;
+    background: $zorroa-lightgray;
+  }
+
+  input[type=range]::-webkit-slider-thumb {
+    margin-top: -6px;
+  }
+  input[type=range] {
+    padding: 0;
+    margin: 0;
+  }
+}
+
+.SimilarHash-slider-icon {
+  color: $zorroa-lightgray;
+  font-size: 14px;
+  margin-left: 8px;
+  margin-right: 8px;
+}
+
+.SimilarHash-slider-input {
+  padding: 0;
+}
+
+.SimilarHash-slider-center-triangle {
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-bottom: 5px solid $zorroa-nearwhite;
+}
+
+.SimilarHash-snap-selected {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  @include zorroa-ok-btn;
 }
