More little fixes

--- a/src/components/Import/Import.scss
+++ b/src/components/Import/Import.scss
@@ -59,6 +59,7 @@
   min-height: 1.5em;
   &:hover { color: $zorroa-sickly-green; }
   div { margin-right: 4px; }
+  cursor: pointer;
 }
 
 .Import-button {
