Stub out GDrive

--- a/src/components/Import/Import.scss
+++ b/src/components/Import/Import.scss
@@ -75,7 +75,7 @@
   @include nowrap;
 
   &:hover:not(.disabled) { background-color: $zorroa-gray; }
-  &.disabled { background-color: $zorroa-lightgray; }
+  &.disabled { background-color: $zorroa-lightgray; cursor: default }
   &.running:not(.disabled) { background-color: $zorroa-faded-red; }
 }
 
