--- a/src/components/Racetrack/SimilarHash.scss
+++ b/src/components/Racetrack/SimilarHash.scss
@@ -58,6 +58,8 @@
   background-position: center;
   margin-left: 2px;
   margin-right: 2px;
+  border: 6px solid transparent;
+  &.selected { border: 6px solid $zorroa-darkish-purple; }
 }
 
 .SimilarHash-carousel {
@@ -66,6 +68,7 @@
   margin-bottom: 10px;
   overflow: auto;
   width: 100%;
+  padding-bottom: 4px;
   @include flexRowCenter;
   &::-webkit-scrollbar { height: 5px; }
 }
