Prioritize selection over hover and use transparent gray for hover color instead of green.

--- a/src/components/Racetrack/Facet.scss
+++ b/src/components/Racetrack/Facet.scss
@@ -65,7 +65,7 @@
       cursor: pointer;
       &:hover { background-color: $zorroa-hover; }
       &.selected { background-color: $zorroa-selected; }
-      &.selected:hover { background-color: $zorroa-hover; }
+      &.selected:hover { background-color: $zorroa-selected; }
     }
 
     .Facet-value-table-key {
