--- a/src/styles/core-mixins.scss
+++ b/src/styles/core-mixins.scss
@@ -45,7 +45,7 @@ $zorroa-nearwhite  : #ededed;
 $zorroa-transparent: transparent;
 
 $zorroa-selected       : #D1E3F6;
-$zorroa-hover          : #C7E3A4;
+$zorroa-hover          : rgba(0,0,0,0.1);
 $zorroa-dropzone       : rgba(115, 182, 28, 0.75);
 
 /* shared metrics */
