--- a/src/components/Racetrack/SimilarHash.scss
+++ b/src/components/Racetrack/SimilarHash.scss
@@ -31,9 +31,8 @@
     height: 25px;
     cursor: pointer;
     color: $zorroa-greyish-brown;
-    &:hover { background-color: $zorroa-hover; }
+    &:not(.selected):hover { background-color: $zorroa-hover; }
     &.selected { background-color: $zorroa-selected; }
-    &.selected:hover { background-color: $zorroa-hover; }
     &.disabled { color: $zorroa-lightgray; }
   }
 }
