--- a/src/components/Suggestions/Suggestions.scss
+++ b/src/components/Suggestions/Suggestions.scss
@@ -82,10 +82,6 @@
   color: $zorroa-darkgray;
   line-height: 1.8;
 
-  &:hover {
-    color: $zorroa-sickly-green;
-  }
-  &.selected {
-    background-color: rgba(192, 192, 192, 0.5);
-  }
+  &:not(.selected):hover { color: $zorroa-sickly-green; }
+  &.selected { background-color: rgba(192, 192, 192, 0.5); }
 }
