--- a/src/assets/fonts/zorroa-icons/style.css
+++ b/src/assets/fonts/zorroa-icons/style.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'zorroa-icons';
-  src:  url('fonts/zorroa-icons.eot?susp0q');
-  src:  url('fonts/zorroa-icons.eot?susp0q#iefix') format('embedded-opentype'),
-    url('fonts/zorroa-icons.woff2?susp0q') format('woff2'),
-    url('fonts/zorroa-icons.ttf?susp0q') format('truetype'),
-    url('fonts/zorroa-icons.woff?susp0q') format('woff'),
-    url('fonts/zorroa-icons.svg?susp0q#zorroa-icons') format('svg');
+  src:  url('fonts/zorroa-icons.eot?knvqfq');
+  src:  url('fonts/zorroa-icons.eot?knvqfq#iefix') format('embedded-opentype'),
+    url('fonts/zorroa-icons.woff2?knvqfq') format('woff2'),
+    url('fonts/zorroa-icons.ttf?knvqfq') format('truetype'),
+    url('fonts/zorroa-icons.woff?knvqfq') format('woff'),
+    url('fonts/zorroa-icons.svg?knvqfq#zorroa-icons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -60,6 +60,9 @@
 }
 .icon-plus2:before {
   content: "\e928";
+}
+.icon-dissimilar:before {
+  content: "\e974";
 }
 .icon-leaf:before {
   content: "\e973";
