--- a/src/components/Racetrack/SimilarHash.scss
+++ b/src/components/Racetrack/SimilarHash.scss
@@ -124,8 +124,8 @@
 }
 
 .SimilarHash-slider-icon {
-  color: $zorroa-lightgray;
-  font-size: 14px;
+  color: $zorroa-darkgray;
+  font-size: 20px;
   margin-left: 8px;
   margin-right: 8px;
 }
