Add fuzzy search to user settings [Fixes #145470885]
Use the fuzzy user settings as the default fuzzy value when searching
Swap the order of the exact/fuzzy Toggles to show exact as default & fuzzy as custom

--- a/src/components/Racetrack/SimpleSearch.scss
+++ b/src/components/Racetrack/SimpleSearch.scss
@@ -44,8 +44,8 @@
     margin-bottom: 10px;
   }
 
-  .SimpleSearch-fuzzy-label {
-    margin-left: 12px;
+  .SimpleSearch-fuzzy .Toggle {
+    margin: 10px;
   }
 
   .SimpleSearch-clear-search {
