--- a/src/components/Preferences/Preferences.scss
+++ b/src/components/Preferences/Preferences.scss
@@ -70,12 +70,34 @@
 }
 
 .Preferences-user {
+  @include flexCol;
+  color: $zorroa-darkgray;
+}
+
+.Preferences-user-header {
   @include flexRow;
   @include flexJustifySpaceBetween;
   color: $zorroa-darkgray;
   background-color: $zorroa-lightgray;
   margin-bottom: 10px;
   padding: 10px 20px;
+}
+
+.Preferences-user-body {
+  margin-bottom: 10px;
+  padding: 10px 20px;
+}
+
+.Preferences-user-fuzzy {
+  @include flexRow;
+  @include flexAlignItemsCenter;
+  padding-left: 12px;
+  padding-right: 12px;
+  margin-bottom: 10px;
+}
+
+.Preferences-user-fuzzy .Toggle {
+  margin: 10px;
 }
 
 .Preferences-curator {
