--- a/src/components/Metadata2/Metadata2.scss
+++ b/src/components/Metadata2/Metadata2.scss
@@ -201,23 +201,34 @@ $FolderItemHeight : 25px;
   align-items: stretch;
   padding-left: 4px;
   padding-right: 4px;
+  &.isSelected { background-color: $zorroa-selected; }
 }
 
 .Metadata2-leaf-title {
   @include flexRow;
-  @include flexJustifySpaceBetween;
-  @include flexAlignItemsCenter;
+  @include flexAlignItemsStart;
+  cursor: default;
+  padding-top: 6px;
 }
 
-.Metadata2-leaf-title-label {
+.Metadata2-leaf-title-head {
+  font-family: "Roboto Condensed";
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-size: 12px;
+  color: $zorroa-gray;
+  font-weight: 400;
+}
+
+.Metadata2-leaf-title-tail {
   font-family: "Roboto Condensed";
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   font-size: 12px;
   color: $zorroa-lightgray;
-  font-weight: 300;
-  @include flexOn;
+  font-weight: 400;
 }
 
 .Metadata2-value {
@@ -239,7 +250,20 @@ $FolderItemHeight : 25px;
 .Metadata2-value-null {
   border-left: 1px solid $zorroa-nearwhite;
   padding: 4px;
-  color: $zorroa-nearwhite;
+  color: $zorroa-lightgray;
   font-style: italic;
   font-size: 12px;
+}
+
+.Metadata2-no-assets {
+  @include flexColCenter;
+  color: $zorroa-lightgray;
+  margin-top: 10px;
+  padding-bottom: 20px;
+}
+
+.Metadata2-no-assets-icon {
+  margin-bottom: 10px;
+  font-size: 40px;
+  color: $zorroa-lightgray;
 }
