Tweak null icon to use purple instead of yellow.

--- a/src/components/Metadata2/Metadata2.scss
+++ b/src/components/Metadata2/Metadata2.scss
@@ -39,6 +39,11 @@
   }
 }
 
+.Metadata2-nulls {
+  @extend .Metadata2-favorites;
+  &.isSelected { color: $zorroa-darkish-purple; }
+}
+
 .Metadata2-item-widget {
   @include flexRowCenter;
   font-size: 12px;
