Add resizeable dark Metadata window in Lightbox

--- a/src/components/Lightbox/Lightbar.scss
+++ b/src/components/Lightbox/Lightbar.scss
@@ -19,6 +19,8 @@
   color: white;
   background-color: black;
   border: none;
+
+  &.isOpen { transform: rotate(180deg); }
 }
 
 .Lightbar-metadata {
