Center the save/clear Racetrack buttons in Safari

--- a/src/components/Racetrack/Racetrack.scss
+++ b/src/components/Racetrack/Racetrack.scss
@@ -115,7 +115,7 @@
     margin-right: 8px;
 
     .Racetrack-footer-group {
-      display: flex;
+      @include flexRowCenter;
     }
 
     .Racetrack-footer-save {
