--- a/src/components/Metadata2/Metadata2.scss
+++ b/src/components/Metadata2/Metadata2.scss
@@ -80,11 +80,7 @@
 .Metadata2-namespace {
   @include flexRow;
   @include flexJustifySpaceBetween;
-  margin-top: 4px;
-  margin-left: 4px;
-  margin-right: 4px;
-  padding-top: 8px;
-  padding-bottom: 4px;
+  padding: 8px;
   border-top: 1px solid $zorroa-nearwhite;
   font-size: 12px;
   font-weight: 500;
@@ -95,7 +91,10 @@
     color: $zorroa-lightgray;
   }
 
-  &:not(.isSelected):hover { background-color: $zorroa-hover; }
+  &:not(.isSelected):hover {
+    background-color: $zorroa-hover;
+    .Metadata2.dark & { background-color: rgba(255,255,255, 0.1); }
+  }
 }
 
 .Metadata2-namespace-toggle {
@@ -113,10 +112,13 @@
   @include flexRow;
   @include flexAlignItemsCenter;
   align-items: stretch;
-  padding-left: 4px;
-  padding-right: 4px;
+  padding-left: 12px;
+  padding-right: 8px;
 
-  &:not(.isSelected):hover { background-color: $zorroa-hover; }
+  &:not(.isSelected):hover {
+    background-color: $zorroa-hover;
+    .Metadata2.dark & { background-color: rgba(255,255,255, 0.1); }
+  }
   &.isSelected { background-color: $zorroa-selected; }
 }
 
