--- a/src/components/Table/TableField.scss
+++ b/src/components/Table/TableField.scss
@@ -61,9 +61,10 @@
   .Table-cell.dark & {
     color: $zorroa-lightgray;
     background-color: rgba(255,255,255,0.1);
+    cursor: default;
   }
 
-  &:hover {
+  &:not(.Table-cell.dark):hover {
     color: #fff;
     background-color: $zorroa-sickly-green;
 
