--- a/src/components/Filter/Filter.scss
+++ b/src/components/Filter/Filter.scss
@@ -14,6 +14,7 @@
     position: relative;
     border-radius: 3px;
     border: 1px solid $zorroa-lightgray;
+    &.dark { border: 1px solid $zorroa-darkgray; }
   }
 }
 
@@ -27,6 +28,9 @@
   padding-left: 4px;
   padding-right: 20px;
   background: transparent;
+  color: $zorroa-darkgray;
+
+  .Filter.dark & { color: $zorroa-lightgray; }
 
   .Filter.box & {
     border: none;
