--- a/src/components/Metadata2/Metadata2.scss
+++ b/src/components/Metadata2/Metadata2.scss
@@ -138,6 +138,9 @@
 }
 
 .Metadata2-leaf-title-head {
+  @include noSelect;
+  @include clampText;
+  @include nowrap;
   font-family: "Roboto Condensed";
   white-space: nowrap;
   overflow: hidden;
@@ -150,6 +153,9 @@
 }
 
 .Metadata2-leaf-title-tail {
+  @include noSelect;
+  @include clampText;
+  @include nowrap;
   font-family: "Roboto Condensed";
   white-space: nowrap;
   overflow: hidden;
@@ -157,6 +163,7 @@
   font-size: 12px;
   color: $zorroa-lightgray;
   font-weight: 400;
+  margin-left: 4px;
 
   .Metadata2.dark & { color: $zorroa-gray; }
 }
