--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -187,9 +187,11 @@ $tableResizeRightPadding: 20px;
 .Table-title-tail {
   @include noSelect;
   @include clampText;
+  @include nowrap;
   text-align: left;
   text-transform: uppercase;
   font-size: 12px;
   font-family: Roboto Condensed;
   color: $zorroa-lightgray;
+  margin-left: 4px;
 }
