Fix Safari Lightbox height issues using flexbox.

--- a/src/components/Inspector/Image.scss
+++ b/src/components/Inspector/Image.scss
@@ -3,9 +3,7 @@
 .Image {
   @include flexOn;
   width: 100%;
-  height: 100%;
   max-width:100%;
-  max-height:100%;
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
@@ -17,4 +15,5 @@
   max-width:100%;
   max-height:100%;
   @include flexCol;
+  @include flexOn;
 }
