--- a/src/components/Inspector/Video.scss
+++ b/src/components/Inspector/Video.scss
@@ -4,7 +4,7 @@
   @include flexCol;
   @include flexAlignItemsCenter;
   @include fullWidth;
-  @include fullHeight;
+  @include flexOn;
   color: white;
   background-color: black;
   border-bottom-right-radius: 3px;
