--- a/src/components/Inspector/Inspector.scss
+++ b/src/components/Inspector/Inspector.scss
@@ -1,5 +1,11 @@
+@import '../../styles/core-mixins.scss';
+
 .Inspector {
-  flex: 1;
+  @include fullWidth;
+  @include flexCenter;
+  @include flexOn;
+  @include flexCol;
+
   padding: 8px;
   display: flex;
   justify-content: center;
@@ -7,10 +13,10 @@
 }
 
 .Inspector-content {
+  @include flexCol;
+  @include flexOn;
   width: 100%;
-  height: 100%;
   max-width:100%;
-  max-height:100%;
   overflow: hidden;
   position: relative;
 }
