--- a/src/components/Inspector/Multipage.scss
+++ b/src/components/Inspector/Multipage.scss
@@ -2,10 +2,9 @@
 
 .Multipage {
   width: 100%;
-  height: 100%;
   max-width:100%;
-  max-height:100%;
   @include flexCol;
+  @include flexOn;
 }
 
 .Multipage-document-switch {
