Add link to search tips in SimpleSearch widget

--- a/src/components/Racetrack/SimpleSearch.scss
+++ b/src/components/Racetrack/SimpleSearch.scss
@@ -50,4 +50,11 @@
       cursor: pointer;
     }
   }
+
+  .SimpleSearch-help {
+    padding: 12px;
+    width: 100%;
+    text-align: right;
+    a { text-decoration: none; }
+  }
 }
