--- a/src/components/Suggestions/Suggestions.scss
+++ b/src/components/Suggestions/Suggestions.scss
@@ -39,6 +39,7 @@
   border: none;
   background: none;
   color: $zorroa-gray;
+  padding-top: 5px;
 
   &:hover {
     color: $zorroa-sickly-green;
