--- a/src/components/Preferences/Preferences.scss
+++ b/src/components/Preferences/Preferences.scss
@@ -83,10 +83,6 @@
   padding: 10px 20px;
 }
 
-.Preferences-user-fuzzy .Toggle {
-  margin: 10px;
-}
-
 .Preferences-curator {
   border-bottom: 1px solid $zorroa-lightgray;
   padding: 10px 20px;
@@ -139,4 +135,21 @@
   max-height: 300px;
   overflow: auto;
   margin: 10px 20px;
+}
+
+.Preferences-field-template {
+  @include flexRowCenter;
+}
+
+.Preferences-field-template-input {
+  margin-top: 10px;
+  width: 300px;
+  color: $zorroa-gray;
+  padding: 4px;
+}
+
+.Preferences-field-template-label {
+  width: 120px;
+  margin-left: 8px;
+  color: $zorroa-gray;
 }
